--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "scripts": {
         "dev": "nodemon index.js",
-        "start": "node index.js"
+        "start": "bun run index.js"
     },
     "nodemonConfig": {
         "ignore": [
